--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,12 +22,13 @@ dependencies:
   intl: ^0.16.1
   provider: ^4.0.5
   http: ^0.12.1
+  shared_preferences: ^0.5.7
 
   
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^0.1.3
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +50,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/images/waiting.png
+   - assets/images/product_placeholder.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
